[package]
name = "weird"
version = "0.2.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/archer884/weird"
repository = "https://github.com/archer884/weird"
keywords = ["crockford", "base32"]
categories = ["encoding", "parsing", "value-formatting", "web-programming"]
description = """
A Crockford Base32-like encoding that produces non-sequential output based on a salt.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Some idiot decided that things should work differently in release mode
# than in debug, which makes hash implementations annoying to write.
# [profile.dev]
# overflow-checks = false

[dependencies]
rand = "0.8.3"
squirrel = { git = "https://github.com/archer884/squirrel" }

[dev-dependencies]
criterion = "0.3"
crockford = "1.1.0"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false
